--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=users
 POSTGRES_PASSWORD=password
-POSTGRES_HOST=book-db
-POSTGRES_DB=book-db
+POSTGRES_HOST=library-db
+POSTGRES_DB=library-db
 POSTGRES_PORT=5432
