--- a/kubernates/client/client-hpa.yaml
+++ b/kubernates/client/client-hpa.yaml
@@ -1,14 +1,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: library-server
+  name: library-client
 spec:
   maxReplicas: 3
   minReplicas: 2
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: library-server
+    name: library-client
   metrics:
     - resource:
         name: cpu
