--- a/kubernates/client/client-service.yaml
+++ b/kubernates/client/client-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: library-server
+  name: library-client
   labels:
-    app: library-server
+    app: library-client
 spec:
   type: LoadBalancer
   selector:
-    app: library-server
+    app: library-client
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 9000
+      targetPort: 9000
       protocol: TCP
